test/bad/functions/call02.px

func f(Int x) Bool def
    return x > 0

f(f(5))
